# simd_tests

./: .gitignore  CMakeLists.txt  README.md  bilateral.cpp  bilateral.f90  bilateral_cpp_simd_improved.cpp  bilateral_no_simd.cpp  main.cpp  run.sh
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
